--- a/www/css/common.css
+++ b/www/css/common.css
@@ -135,6 +135,10 @@ footer, header {
     font-size: 14px;
 }
 
+.link-wrapper {
+    text-decoration: none;
+}
+
 .action-wrapper input {
     margin-left: 15px;
 }
@@ -144,7 +148,7 @@ footer, header {
     text-decoration: none;
 }
 
-.action-wrapper input:not(input[type=file]):hover {
+.action-wrapper input:hover {
     background: #333;
     color: #fff;
 }
@@ -170,6 +174,7 @@ input:focus, textarea:focus {
 
 .link-wrapper:hover {
     background: #333;
+    color: #fff
 }
 
 .link-wrapper:hover a {
